--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dexOptions {
+        jumboMode true
+    }
 }
+ext.supportLibVersion = '25.1.1'
+ext.firebaseVersion = '10.0.1'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -28,4 +33,26 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
+
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
+
+    compile "com.google.android.gms:play-services-auth:${firebaseVersion}"
+    compile "com.google.firebase:firebase-storage:${firebaseVersion}"
+    compile "com.google.firebase:firebase-database:${firebaseVersion}"
+    compile "com.google.firebase:firebase-crash:${firebaseVersion}"
+    compile "com.google.firebase:firebase-auth:${firebaseVersion}"
+    compile "com.google.firebase:firebase-config:${firebaseVersion}"
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile "com.google.firebase:firebase-core:${firebaseVersion}"
+
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    compile 'io.gsonfire:gson-fire:1.8.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+
 }
+
