--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,10 @@ android {
     }
 }
 ext.supportLibVersion = '25.1.1'
-ext.firebaseVersion = '10.0.1'
+ext.firebaseVersion = '11.0.0'
 
 dependencies {
+    
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -45,7 +46,6 @@ dependencies {
     compile "com.google.firebase:firebase-config:${firebaseVersion}"
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile "com.google.firebase:firebase-core:${firebaseVersion}"
-
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
@@ -56,3 +56,4 @@ dependencies {
 
 }
 
+apply plugin: 'com.google.gms.google-services'
