--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'io.gsonfire:gson-fire:1.8.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 
 }
 
