--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/gplus" />
+        <meta-data android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/link" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
