--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     compile "com.android.support:recyclerview-v7:${supportLibVersion}"
     compile "com.android.support:cardview-v7:${supportLibVersion}"
-
+    compile 'com.firebaseui:firebase-ui-database:1.2.0'
     compile "com.google.android.gms:play-services-auth:${firebaseVersion}"
     compile "com.google.firebase:firebase-storage:${firebaseVersion}"
     compile "com.google.firebase:firebase-database:${firebaseVersion}"
@@ -52,9 +52,10 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
     compile 'io.gsonfire:gson-fire:1.8.0'
+    compile "com.google.firebase:firebase-appindexing:${firebaseVersion}"
+    compile "com.google.android.gms:play-services-appinvite:${firebaseVersion}"
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
 
 }
 
