--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,8 @@
 
         <activity android:name=".NewEvent" />
         <activity android:name=".ChooseEvent" />
-        <activity android:name=".Helper"></activity>
+        <activity android:name=".Helper" />
+        <activity android:name=".Manage"></activity>
     </application>
 
 </manifest>
