--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
         <activity android:name=".NewEvent" />
         <activity android:name=".ChooseEvent" />
         <activity android:name=".Helper" />
-        <activity android:name=".Manage"></activity>
+        <activity android:name=".Manage" />
+        <activity android:name=".TeamActivity"></activity>
     </application>
 
 </manifest>
